--- a/css/style.css
+++ b/css/style.css
@@ -60,20 +60,17 @@ a{
 
 #email {
     width: 200px;
-    border: 1px solid #c2c2c2;
-    margin: 0em;
-    padding: 1px 2px;
-    border-width: 2px;
-    border-style: inset;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
+    border: 1px solid #000;
+    padding: 0.5rem;
 }
 
 #submit {
     max-width: 150px;
+    font-weight: bold;
     width: 100%;
     height: 30px;
     margin: 15px 0;
     border: 0;
     background-color: #f1c40f;
+    text-transform: uppercase;
 }
